updated KEY to latest BOSE release. deprecated trackInfo
